# opencode-plugin-improved-todowrite

./: .envrc  .gitignore  GAPS.md  Justfile  README.md  improved_todowrite.todos.json  justfile  opencode.json  package.json  pyproject.toml  todos.json  tsconfig.json
.config/: opencode.json  opencode.mcp.json
.config/.opencode/plugins/: improved-todowrite.ts
.github/workflows/: ci.yml  publish.yml
improved_todowrite/: __init__.py  cli.py  core.py  models.py
mcp-server/: README.md  pyproject.toml  server.py
mcp-server/tests/: test_server.py
src/: cli-adapter.ts  index.ts  todo-tree.ts  todo-tree.ts.recovered
tests/integration/: opencode.json  test-opencode.json  todowrite-plugin.test.ts
tests/python/: test_cli.py
tests/unit/: todowrite.test.ts
