[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "improved-todowrite-mcp"
version = "1.0.0"
description = "Thin FastMCP wrapper for the improved-todowrite CLI"
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.0.0", "pydantic>=2.11.3"]

[project.scripts]
improved-todowrite-mcp = "server:main"

[dependency-groups]
dev = ["pytest-asyncio>=0.24.0", "inline-snapshot>=0.10.0"]

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
